<resources>
    <string name="app_name">SpeechRecorderAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">OK</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="cancel">CANCEL</string>
    <string name="done">DONE</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="play">PLAY</string>
    <string name="stop">STOP</string>
    <string name="finish">FINISH</string>
    <string name="mic">MIC</string>
    <string name="close">CLOSE</string>
    <string name="open">OPEN</string>
    <string name="upload">UPLOAD</string>
    <string name="download">DOWNLOAD</string>
    <string name="record">RECORD</string>
    <string name="authen">AUTHORIZE</string>
    <string name="connect">CONNECT</string>
    <string name="button_search">Search</string>
    <string name="button_add">Add</string>
    <string name="button_download">Download</string>
    <string name="button_settings">Settings</string>
    <string name="button_exit">Exit</string>
    <string name="testviewtext">
        The quick brown fox jumps over the lazy dog.</string>
    <string name="swipeHintText">SWIPE FROM HERE TO RIGHT</string>
    <string name="hinttext2">SCROLL DOWN FOR MORE</string>
    <string name="drawer_items_open">Open navigation drawer</string>
    <string name="drawer_items_close">Close navigation drawer</string>
    <string-array name="array_drawer_items">
        <item>Sessions</item>
        <item>Scripts</item>
        <item>Speakers</item>
    </string-array>
     <string name="title_settings">Settings</string>
    <string name="settings_application">Application</string>
    <string name="settings_lang_key">lang</string>
    <string name="settings_lang_default">en</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_summary">Set the language of the app</string>
    <string-array name="language_items">
        <item>English</item>
        <item>German</item>
        <item>Chinese Simplified</item>
    </string-array>
     <string-array name="language_items_values">
              <item>en</item>
              <item>de</item>
              <item>chs</item>
     </string-array>
     <string name="settings_hardware">Hardware</string>
     <string name="settings_mic_volume_key">mic_vol</string>
     <string name="settings_mic_volume_default">-1</string>
     <string name="settings_microphone">Microphone</string>
     <string name="settings_microphone_summary">Set the microphone volume</string>
     <string name="dialogmessage_microphone">
         Click MIC to start testing microphone
         \nOR RECORD to start recording a test sample.
         \nPlease speak something loud and something light.
         \nThen click STOP to finish the test.</string>
     <string name="settings_recvalue">Recording Values</string>
     <string name="settings_sample_rate">Sample Rate</string>
     <string name="settings_sample_rate_summary">Set sample rate value</string>
     <string name="settings_sample_rate_key">sample_rate</string>
     <string name="settings_sample_rate_default">22050</string>
     <string-array name="sample_rate_items">
            <item>8000Hz</item>
            <item>11025Hz</item>
            <item>16000Hz</item>
            <item>22050Hz</item>
            <item>32000Hz</item>
            <item>44100Hz</item>
            <item>48000Hz</item>
            <item>96000Hz</item>
      </string-array>
      <string-array name="sample_rate_items_values">
                 <item>8000</item>
                 <item>11025</item>
                 <item>16000</item>
                 <item>22050</item>
                 <item>32000</item>
                 <item>44100</item>
                 <item>48000</item>
                 <item>96000</item>
      </string-array>
      <string name="settings_channels">Channels</string>
      <string name="settings_channels_key">channels</string>
      <string name="settings_channels_summary">Set channels</string>
      <string name="settings_channels_default">2</string>
	      <string-array name="channels_items">
	          <item>1 Channel</item>
	          <item>2 Channels</item>
	      </string-array>
	      <string-array name="channels_items_values">
	          <item>1</item>
	          <item>2</item>
	      </string-array>
      <string name="settings_overwrite">Overwrite</string>
      <string name="settings_overwrite_key">overwrite</string>
      <string name="settings_overwrite_summary">Overwrite original file</string>
      <string name="settings_overwrite_warning">Overwrite Warning</string>
      <string name="settings_overwrite_warning_key">overwrite_warning</string>
      <string name="settings_overwrite_warning_summary">Show warning before overwriting original file</string>
      <string name="settings_servers">Servers</string>
      <string name="settings_dropbox">Dropbox</string>
      <string name="settings_dropbox_summary">Authorize the app with Dropbox server</string>
      <string name="settings_key_isDropboxAuthorized">isDropboxAuthorized</string>
      <string name="settings_dropbox_authorized_text">This app is AUTHORIZED!</string>
      <string name="settings_dropbox_unauthorized_text">This app is UNAUTHORIZED!</string>
    <string name="speaker_attr_firstname">First Name</string>
    <string name="speaker_attr_surname">Surname</string>
    <string name="speaker_attr_name">Name</string>
    <string name="speaker_attr_sex">Sex</string>
    <string name="speaker_attr_accent">Accent</string>
    <string name="speaker_attr_birthday">Birthday</string>
    <string name="key_speaker_attr_firstname">first_name</string>
    <string name="key_speaker_attr_surname">surname</string>
    <string name="key_speaker_attr_sex">sex</string>
    <string name="key_speaker_attr_accent">accent</string>
    <string name="key_speaker_attr_birthday">birthday</string>
    <string name="speaker1_firstname">Adam</string>
    <string name="speaker1_surname">Example</string>
    <string name="speaker1_sex">male</string>
    <string name="speaker1_accent">Bayerisch</string>
    <string name="speaker1_birthday">YYYY,MM,DD</string>
    <string name="speaker2_firstname">Mary</string>
    <string name="speaker2_surname">Example</string>
    <string name="speaker2_sex">female</string>
    <string name="speaker2_accent">Bayerisch</string>
    <string name="speaker2_birthday">YYYY,MM,DD</string>
    <string name="script_attr_id">Script ID</string>
    <string name="script_attr_description">Description</string>
    <string name="script_attr_id_key">_id</string>
    <string name="script_attr_description_key">description</string>
    <string name="script_attr_downloaded">Downloaded</string>
    <string name="script_attr_undownloaded">Undownloaded</string>
    <string name="script1_id">1</string>
    <string name="script1_description">This is a script example.</string>
    <string name="script1_inserver_id">Script Example</string>
    <string name="script1_inserver_description">This is a script example in SERVER.</string>
    <string name="script1_inserver_isdownloaded">isDownloaded</string>
    <string name="session_attr_id">ID</string>
    <string name="session_attr_script_id">Script ID</string>
    <string name="session_attr_creation_day">Created on</string>
    <string name="session_attr_creation_place">Created at</string>
    <string name="session_attr_isfinished">Finished</string>
    <string name="session_attr_id_key">_id</string>
    <string name="session_attr_script_id_key">script_id</string>
    <string name="session_attr_creation_day_key">day</string>
    <string name="session_attr_creation_place_key">place</string>
    <string name="session_attr_isfinished_key">is_finished</string>
    <string name="session1_id">1</string>
    <string name="session1_script_id">1</string>
    <string name="session1_speaker">Adam Exampleman</string>
    <string name="session1_creation_day">YYYY,MM,DD</string>
    <string name="session1_isfinished">Finished</string>
    <string name="recorditem_id_text">itemcode</string>
    <string name="recorditem_intro_text">Instr.</string>
    <string name="recorditem_prompt_text">Prompt</string>
    <string name="recorditem_comment_text">Comment</string>
    <string name="recorditem_scriptid_text">Script</string>
    <string name="recorditem_isuploaded_text">isuploaded</string>
    <string name="record1_id">item_000</string>
    <string name="record1_intro">InstructionExample</string>
    <string name="record1_prompt">PromptExample</string>
    <string name="record1_comment">CommentExample</string>
    <string name="record1_scriptid">ScriptID#</string>
    <string name="record1_isuploaded">IsuploadedExample</string>
    <string name="activity_addspeaker_title">Add Speaker</string>
    <string name="activity_addspeaker_button_startrecording_text">Start</string>
    <string name="activity_addspeaker_firstname_text">Firstname</string>
    <string name="activity_addspeaker_surname_text">Surname</string>
    <string name="activity_addspeaker_accent_text">Accent</string>
    <string name="activity_addspeaker_sex_text">Sex</string>
    <string name="activity_addspeaker_birthday_text">Birthday</string>
    <string-array name="activity_addspeaker_sex_dropdown_items">
                    <item>male</item>
                    <item>female</item>
                </string-array>
    <string name="activity_speakerdetials_title">Speaker Details</string>
    <string name="activity_speakerdetails_button_startnewsession_text">Choose For New Session</string>
    <string name="activity_speakerdetails_name_text">Fullname</string>
    <string name="activity_speakerdetails_accent_text">Accent</string>
    <string name="activity_speakerdetails_sex_text">Sex</string>
    <string name="activity_speakerdetails_birthday_text">Birthday</string>
    <string name="activity_speakerdetails_sessions_text">In Sessions</string>
    <string name="activity_speakerdetails_scripts_text">Read Scripts</string>
    <string name="activity_speakerdetails_sessions_text2">No sessions informations</string>
    <string name="activity_speakerdetails_scripts_text2">No script informations</string>
    <string name="activity_scriptdetails_title">Script Details</string>
    <string name="activity_scriptdetails_button_startnewsession_text">Choose For New Session</string>
    <string name="activity_scriptdetails_scriptid_text">Script ID:</string>
    <string name="activity_scriptdetails_desc_text">This is Description part.</string>
    <string name="activity_scriptdetails_sessions_text">In Sessions</string>
    <string name="activity_scriptdetails_speakers_text">Read by Speakers</string>
    <string name="activity_scriptdetails_sessions_text2">No sessions informations</string>
    <string name="activity_scriptdetails_speakers_text2">No speakers informations</string>
    <string name="act_downloadscripts_title">Download Scripts From Dropbox</string>
    <string name="act_downloadscripts_button_listall_text">List All</string>
    <string name="act_downloadscripts_button_downloadall_text">Download All</string>
    <string name="act_sessiondetails_title">Session Details</string>
    <string name="act_sessiondetails_button_startnewsession_text">Start New Session</string>
    <string name="act_prerecoring_button_test_text">START TEST</string>
	<string name="act_recording_button_next_text">&gt;&gt;</string>
	<string name="act_recording_button_previous_text">&lt;&lt;</string>
	<string name="act_recording_instru_text">TEST:\nWelcome to the SpeechRecorder Demo Script.\nHere you\'ll find the instructions and...</string>
	<string name="act_recording_promptarea_text">and here is the prompt: \na text to read, a question to answer, a picture to describe, or something completely different.</string>
</resources>