<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="vertical" >

    <LinearLayout
    android:layout_width="500dp"
    android:layout_height="300dp"
    android:gravity="center"
    android:orientation="horizontal" >
	    <TextView
	    android:id="@+id/textview_in_dialog_microphone"
	    android:layout_width="460dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:padding="10dp"
	    android:text="@string/dialogmessage_microphone"
	    android:textSize="24sp" />
	    
	    <ProgressBar
	    android:id="@+id/progressBarInDialogSetMic"
	    style="@style/Widget.ProgressBar.Vertical"
	    android:max="6000"
	    android:layout_width="12dp"
	    android:layout_height="match_parent"
	    android:layout_margin="14dp" />
    </LinearLayout>
    
    <LinearLayout
	android:layout_width="500dp"
	android:layout_height="100dp"
	android:gravity="center"
	android:orientation="horizontal" >
        <Button
        android:id="@+id/button_cancel_in_dialog_mic"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/cancel" />
        <Button
		android:id="@+id/button_testmic_in_dialog_mic"
		android:layout_width="100dp"
		android:layout_height="50dp"
		android:text="@string/mic" />
        <Button
        android:id="@+id/button_testrecord_in_dialog_mic"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/record" />
    </LinearLayout>

</LinearLayout>
