<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Buttons shown in overflow in Actionbar -->
    <group 
        android:id="@+id/bgroup_overflow"    
        android:visible="false"
        android:orderInCategory="100" >
            
        <item
            android:id="@+id/button_settings"
            android:showAsAction="never"
            android:title="@string/button_settings" />
        
        <item
            android:id="@+id/button_exit"
            android:showAsAction="never"
            android:title="@string/button_exit" />
    
    </group>
    
    <group 
        android:id="@+id/bgroup_overflow_empty"    
        android:visible="false" >
    
    </group>
    
    
    <!-- Buttons in Actionbar for Fragments, not shown when ActivityMain is created,
            only shown when the Fragment is created -->
    
    <!-- Fragment "Sessions" -->
    <!-- Buttons in Actionbar for Fragment "Sessions"-->
    <group 
        android:id="@+id/bgroup_sessions"
        android:visible="false" >
    
        <item
	        android:id="@+id/button_search_sessions"
	        android:icon="@drawable/ic_button_search"
	        android:showAsAction="always"
	        android:title="@string/button_search" />
        
    </group>
    
    
    <!-- ################################################################# -->
    <!-- Fragment "Scripts" -->
    <!-- Buttons in Actionbar for Fragment "Scripts"-->
    <group 
        android:id="@+id/bgroup_scripts"
        android:visible="false" >
    
        <item
            android:id="@+id/button_download_script"
            android:icon="@drawable/ic_button_download"
            android:showAsAction="always"
            android:title="@string/button_download" />
        
        <item
            android:id="@+id/button_search_scripts"
            android:icon="@drawable/ic_button_search"
            android:showAsAction="always"
            android:title="@string/button_search" />
        
    </group>
    
    <!-- ################################################################# -->
    <!-- Fragment "Speakers" -->
    <!-- Buttons in Actionbar for Fragment "Speakers"-->
    <group 
        android:id="@+id/bgroup_speakers"
        android:visible="false" >
    
        <item
            android:id="@+id/button_add_speaker"
            android:icon="@drawable/ic_button_add"
            android:showAsAction="always"
            android:title="@string/button_add" />
        
        <item
            android:id="@+id/button_search_speakers"
            android:icon="@drawable/ic_button_search"
            android:showAsAction="always"
            android:title="@string/button_search" />
        
    </group>
    
    <!-- ################################################################# -->
    <!-- Activity add speaker -->
    <group 
        android:id="@+id/bgroup_addspeaker"
        android:visible="false" >
    
        <item
            android:id="@+id/activity_addspeaker_button_add"
            android:showAsAction="always"
            android:title="@string/add" />
        
    </group>
    
    <!-- ################################################################# -->
    <!-- Activity speaker details -->
    <group 
        android:id="@+id/bgroup_speakerdetails"
        android:visible="false" >
    
        <item
            android:id="@+id/activity_speakerdetails_button_start"
            android:icon="@drawable/icon_button_mic"
            android:showAsAction="always"
            android:title="@string/activity_speakerdetails_button_startrecording_text" />
        
    </group>
    
    <!-- ################################################################# -->
    <!-- Activity script details -->
    <group 
        android:id="@+id/bgroup_scriptdetails"
        android:visible="false" >
    
        <item
            android:id="@+id/activity_scriptdetails_button_start"
            android:icon="@drawable/icon_button_mic"
            android:showAsAction="always"
            android:title="@string/activity_scriptdetails_button_startrecording_text" />
        
    </group>
    
    <!-- ################################################################# -->
    <!-- Activity download scripts -->
    <group 
    android:id="@+id/bgroup_downloadscripts"
    android:visible="false" >
    
        <item
        android:id="@+id/act_downloadscripts_button_listall"
        android:showAsAction="always"
        android:title="@string/act_downloadscripts_button_listall_text" />
        
        <item
        android:id="@+id/act_downloadscripts_button_downloadall"
        android:showAsAction="always"
        android:title="@string/act_downloadscripts_button_downloadall_text" />
        
        <item
        android:id="@+id/act_downloadscripts_button_authen"
        android:showAsAction="never"
        android:title="@string/authen" />
        
        <item
        android:id="@+id/act_downloadscripts_button_exit"
        android:showAsAction="never"
        android:title="@string/button_exit" />
        
    </group>
    
    <!-- ################################################################# -->
    <!-- Activity session details -->
    <group 
        android:id="@+id/bgroup_sessiondetails"
        android:visible="false" >
        
<!--         <item -->
<!--             android:id="@+id/act_sessiondetails_button_testlistfile" -->
<!--             android:showAsAction="always" -->
<!--             android:title="LIST" /> -->
        
<!--         <item -->
<!--             android:id="@+id/act_sessiondetails_button_testupload" -->
<!--             android:showAsAction="always" -->
<!--             android:title="UPLOAD" /> -->
        
<!--         <item -->
<!--             android:id="@+id/act_sessiondetails_button_testdownload" -->
<!--             android:showAsAction="always" -->
<!--             android:title="DOWNLOAD" /> -->

        <item
            android:id="@+id/act_sessiondetails_button_upload"
            android:icon="@drawable/ic_button_upload"
            android:showAsAction="always"
            android:title="@string/upload" />
        
        <item
            android:id="@+id/act_sessiondetails_button_start"
            android:icon="@drawable/icon_button_mic"
            android:showAsAction="always"
            android:title="@string/record" />
        
    </group>
    
    <!-- ################################################################# -->
    <!-- Activity PreRecording -->
    <group 
        android:id="@+id/bgroup_prerecording"
        android:visible="false" >
    
        <item
            android:id="@+id/act_prerecording_button_test"
            android:showAsAction="always"
            android:title="@string/act_prerecoring_button_test_text" />
        
    </group>
    
    <!-- ################################################################# -->
    <!-- Activity Recording -->
    <group 
        android:id="@+id/bgroup_recording"
        android:visible="false" >
    
        <item
            android:id="@+id/act_recoding_button_done"
            android:showAsAction="always"
            android:title="@string/done" />
        
    </group>

</menu>

<!-- 


    <?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:id="@[+][package:]id/resource_name"
              android:title="string"
              android:titleCondensed="string"
              android:icon="@[package:]drawable/drawable_resource_name"
              android:onClick="method name"
              android:showAsAction=["ifRoom" | "never" | "withText" | "always" | "collapseActionView"]
              android:actionLayout="@[package:]layout/layout_resource_name"
              android:actionViewClass="class name"
              android:actionProviderClass="class name"
              android:alphabeticShortcut="string"
              android:numericShortcut="string"
              android:checkable=["true" | "false"]
              android:visible=["true" | "false"]
              android:enabled=["true" | "false"]
              android:menuCategory=["container" | "system" | "secondary" | "alternative"]
              android:orderInCategory="integer" />
        <group android:id="@[+][package:]id/resource name"
               android:checkableBehavior=["none" | "all" | "single"]
               android:visible=["true" | "false"]
               android:enabled=["true" | "false"]
               android:menuCategory=["container" | "system" | "secondary" | "alternative"]
               android:orderInCategory="integer" >
            <item />
        </group>
        <item >
            <menu>
              <item />
            </menu>
        </item>
    </menu>


 -->