<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/style_linearlayout_activity_example" >

    <LinearLayout
    android:background="#FFFFFF"
    android:layout_width="800dp"
    android:layout_height="450dp"
    android:orientation="vertical" >
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal" >
	            <TextView
	            android:id="@+id/act_recording_text_intro_textvalue"
	            android:layout_height="match_parent"
	            android:layout_width="match_parent"
	            android:gravity="center"
	            android:padding="10dp"
	            android:text="@string/act_recording_instru_text" 
	            android:textSize="20sp"
	            android:textStyle="italic" />
        </LinearLayout>
        
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:orientation="vertical" >
                <TextView
                android:id="@+id/act_recording_text_prompt_textvalue"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="20dp"
                android:gravity="center"
                android:text="@string/act_recording_promptarea_text" 
                android:textSize="44sp"
                android:textStyle="bold" />
                
                <ImageView 
                android:id="@+id/act_recording_prompt_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_record_256"  />
        </LinearLayout>
        
         <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="75dp"
         android:orientation="horizontal"
         android:gravity="center" >
                
                <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:visibility="invisible" />
                
                <Button
                android:id="@+id/act_recording_button_previous"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/act_recording_button_previous_text" />
                
                <LinearLayout
		         android:layout_width="300dp"
		         android:layout_height="75dp"
		         android:orientation="horizontal"
		         android:gravity="center" >
                
		                <ImageView 
		                android:layout_width="50dp"
		                android:layout_height="50dp"
		                android:scaleType="fitXY"
		                android:id="@+id/act_recording_signal_circle"
		                android:src="@drawable/icon_circle_red"  />
		                
		                <Button
		                android:id="@+id/act_recording_button_record"
		                android:layout_width="100dp"
		                android:layout_height="50dp"
		                android:text="@string/record"/>
		                
                </LinearLayout>
                
                <Button
                android:id="@+id/act_recording_button_next"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/act_recording_button_next_text" />
                
                <Button
                android:id="@+id/act_recording_button_play"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/play" />
                
         </LinearLayout>
        
    </LinearLayout>
</LinearLayout>

