<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/style_linearlayout_activity_example" >

    <LinearLayout
    android:background="#FFFFFF"
    android:layout_width="400dp"
    android:layout_height="450dp"
    android:orientation="vertical" >
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal" >
            
            <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:gravity="center" >
                    <ImageView 
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:scaleType="fitXY"
                        android:id="@+id/recorditem_icon_record"
                        android:src="@drawable/icon_record_256"  />
                    
                    <TextView
                        android:id="@+id/recorditem_filepath_textvalue"
                        android:layout_width="0dp"
                        android:layout_height="0dp" />
                    
            </LinearLayout>
            
            <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:gravity="left" >
                    
                    <TextView
                    android:id="@+id/recorditem_itemcode_textvalue"
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="70dp"
                    android:gravity="center_vertical"
                    android:text="@string/record1_id" 
                    android:textSize="22sp"
                    android:textStyle="bold" />
                    
                    <TextView
                    android:id="@+id/recorditem_script_id_textvalue"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/record1_scriptid" 
                    android:textSize="16sp"/>
                    
                    <TextView
                    android:id="@+id/recorditem_isuploaded_textvalue"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/record1_isuploaded" 
                    android:textSize="16sp"/>
                    
                    
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical" >
            
               <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal" >
                       <TextView
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/recorditem_intro_text" 
                        android:textSize="30sp"
                        android:textStyle="bold" />
                       <TextView
                        android:id="@+id/recorditem_intro_textvalue"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:text="@string/record1_intro" 
                        android:textSize="16sp"/>
                </LinearLayout>
                
               <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal" >
                       
                       <TextView
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/recorditem_comment_text" 
                        android:textSize="30sp"
                        android:textStyle="bold" />
                       <TextView
                        android:id="@+id/recorditem_comment_textvalue"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:text="@string/record1_comment" 
                        android:textSize="16sp"/>
                       
                </LinearLayout>
                
               <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="horizontal" >
                       
                       <TextView
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/recorditem_prompt_text" 
                        android:textSize="30sp"
                        android:textStyle="bold" />
                       <TextView
                        android:id="@+id/recorditem_prompt_textvalue"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:text="@string/record1_prompt" 
                        android:textSize="16sp"/>
                       
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

